<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchstocktest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="24dp"
    android:background="@drawable/centered_background_one"
    android:clipToOutline="true"
    android:theme="@style/Theme.MyApplication"
    android:contentDescription="@string/pantalla_busqueda_stock"
    tools:context="com.smartstock.myapplication.ui.SearchStockFragment">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_search_stock_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >
        <TextView
            android:id="@+id/buscar_nueva"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:text="@string/consulta_disponibilidad_titulo"

            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
            android:gravity="center"
            android:contentDescription="@string/titulo_busqueda_stock"
            android:importantForAccessibility="yes"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_search_stock_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_search_stock_1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/textField6_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/consulta_disponibilidad_bodega"
            android:paddingHorizontal="4dp"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_bodega">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCreate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:popupBackground="@drawable/custom_popup_background"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="none"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/hint_seleccionar_bodega"
                />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_search_stock_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_search_stock_2"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/textField6_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/consulta_disponibilidad_producto"
            android:paddingHorizontal="4dp"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_producto">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCreate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:popupBackground="@drawable/custom_popup_background"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="none"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/hint_seleccionar_producto"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/section_search_stock_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_search_stock_3"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >
        <Button
            android:id="@+id/buttonSearchProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:minWidth="180dp"
            android:minHeight="48dp"
            android:backgroundTint="@color/schemesOrange600"
            android:background="@drawable/rounded_button_small"
            android:text="@string/consulta_disponibilidad_buscar"
            android:textColor="@color/colorBackground"
            android:contentDescription="@string/boton_buscar_producto"
            android:importantForAccessibility="yes"
            android:textSize="@dimen/textAppearanceTitleSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_search_stock_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="90dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_search_stock_4"
        android:paddingHorizontal="8dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stocksResultRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/lista_resultados_stock"
            tools:listitem="@layout/stock_item" />
    </RelativeLayout>

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_search_stock_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_search_stock_5"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >
        <Button
            android:id="@+id/buttonCancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:minWidth="180dp"
            android:minHeight="48dp"
            android:background="@drawable/rounded_button"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/consulta_disponibilidad_volver"
            android:textColor="@color/colorBackground"
            android:contentDescription="@string/boton_volver_busqueda"
            android:importantForAccessibility="yes"
            android:textSize="@dimen/textAppearanceTitleSmall" />

    </RelativeLayout>
</RelativeLayout>