...
        android:id="@+id/nav_clients"
        android:icon="@drawable/baseline_person_24"
        android:contentDescription="@string/lista_de_clientes_menu"
        android:title="@string/nav_cliente" />

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/nav_menu">

    </item>

</menu>
...
