...
        android:id="@+id/section_20"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        >
        <TextView
            android:id="@+id/client_list"
            android:layout_centerVertical="true"
            android:layout_width="420dp"
            android:layout_height="50dp"
            android:text="@string/lista_de_visitas"
            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
...
