<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/uploadvideo"
    android:paddingTop="16dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/centered_background_one"
    android:clipToOutline="true"
    android:theme="@style/Theme.MyApplication"
    tools:context="com.smartstock.myapplication.ui.UploadVideoFragment"
    android:contentDescription="@string/pantalla_carga_video">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_upload_video_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >
        <TextView
            android:id="@+id/upload_video_title"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargar_video_titulo"
            android:minHeight="50dp"
            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
            android:gravity="center"
            android:contentDescription="@string/titulo_carga_video"
            android:importantForAccessibility="yes"
            />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_upload_video_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_upload_video_1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >
        <TextView
            android:id="@+id/upload_video_subtitle"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargar_video_subtitulo"
            android:textAppearance="@style/total"
            android:lineSpacingExtra="2sp"
            android:gravity="center"
            android:contentDescription="@string/subtitulo_carga_video"
            android:importantForAccessibility="yes"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_upload_video_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_upload_video_2"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/upload_vide_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/seleccionar_cliente"
            android:paddingHorizontal="4dp"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_cliente">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCreate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:popupBackground="@drawable/custom_popup_background"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="none"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/hint_seleccionar_cliente"
                />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_upload_video_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_upload_video_3"
        android:clipToOutline="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/upload_video_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/seleccionar_fecha"
            android:paddingHorizontal="4dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_calendar_today_24"
            app:endIconContentDescription="@string/seleccionar_fecha"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_fecha"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datePickerCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="date"
                android:background="@color/white"
                android:textColor="@color/black"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/hint_seleccionar_fecha"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_upload_video_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_upload_video_4"
        android:paddingVertical="24dp"
        >
        <ImageView
            android:id="@+id/videoUploadIcon"
            android:layout_width="96dp"
            android:layout_height="67dp"
            android:layout_centerInParent="true"
            android:background="@drawable/baseline_file_upload_48"
            android:scaleType="center"
            android:contentDescription="@string/icono_cargar_video"
            android:importantForAccessibility="yes"
            android:focusable="true"
            android:clickable="true" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_upload_video_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_upload_video_5"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >
        <TextView
            android:id="@+id/video_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargar_video_seleccionado"
            android:textAppearance="@style/total"
            android:lineSpacingExtra="2sp"
            android:gravity="start|center_vertical"
            android:contentDescription="@string/estado_video_seleccionado"
            android:importantForAccessibility="yes"
            />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_upload_video_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_upload_video_6"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >
        <Button
            android:id="@+id/buttonCancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:minWidth="180dp"
            android:minHeight="60dp"
            android:background="@drawable/rounded_button"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/center_divider_action"
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/cancelar"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall"
            android:contentDescription="@string/boton_cancelar_carga"
            android:importantForAccessibility="yes"/>
        <Button
            android:id="@+id/buttonAcceptCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:minWidth="180dp"
            android:minHeight="60dp"
            android:background="@drawable/rounded_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:layout_toRightOf="@+id/center_divider_action"
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/cargar_video_seleccionar_cargar"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall"
            android:contentDescription="@string/boton_aceptar_carga"
            android:importantForAccessibility="yes"/>
        <View
            android:id="@+id/center_divider_action"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>